--- a/agents/pyproject.toml
+++ b/agents/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "langchain (>=0.3.20,<0.4.0)",
     "langgraph (>=0.3.7,<0.4.0)",
     "langchain-community (>=0.3.19,<0.4.0)",
-    "langchain-openai (>=0.3.8,<0.4.0)"
+    "langchain-openai (>=0.3.8,<0.4.0)",
+    "langgraph-supervisor (>=0.0.9,<0.0.10)",
+    "langchain-anthropic (>=0.3.9,<0.4.0)"
 ]
 
 [tool.poetry]
