--- a/agents/pyproject.toml
+++ b/agents/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "langchain-community (>=0.3.19,<0.4.0)",
     "langchain-openai (>=0.3.8,<0.4.0)",
     "langgraph-supervisor (>=0.0.9,<0.0.10)",
-    "langchain-anthropic (>=0.3.9,<0.4.0)"
+    "langchain-anthropic (>=0.3.9,<0.4.0)",
+    "fastapi (>=0.115.11,<0.116.0)",
+    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 [tool.poetry]
