--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,7 +10,6 @@ requires-python = ">=3.11,<3.12"
 dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "langsmith (>=0.3.13,<0.4.0)",
-    "langchain-mcp-adapters (>=0.0.3,<0.0.4)",
     "langchain (>=0.3.20,<0.4.0)",
     "langgraph (>=0.3.5,<0.4.0)",
     "langchain-groq (>=0.2.5,<0.3.0)",
@@ -18,12 +17,17 @@ dependencies = [
     "torch (==2.2.2)",
     "sentence-transformers (>=3.4.1,<4.0.0)",
     "numpy (>=1.25,<2.0)",
-    "faiss-cpu (>=1.10.0,<2.0.0)"
+    "faiss-cpu (>=1.10.0,<2.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 [tool.poetry]
 packages = [{include = "server", from = "src"}]
 
+[tool.poetry.dependencies]
+python = "=3.11.11"
+util = {path = "../util", develop = true}
+agents = {path = "../agents", develop = true}
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
