--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "sentence-transformers (>=3.4.1,<4.0.0)",
     "numpy (>=1.25,<2.0)",
     "faiss-cpu (>=1.10.0,<2.0.0)",
-    "aiosqlite (>=0.21.0,<0.22.0)"
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "chattts (>=0.2.3,<0.3.0)",
+    "pydub (>=0.25.1,<0.26.0)",
+    "gtts (>=2.5.4,<3.0.0)"
 ]
 
 [tool.poetry]
