--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "faiss-cpu (>=1.10.0,<2.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
  "gtts (>=2.5.4,<3.0.0)",
- "langchain-openai (>=0.3.8,<0.4.0)"
+ "langchain-openai (>=0.3.8,<0.4.0)",
+ "googletrans (>=4.0.2,<5.0.0)"
 ]
 
 [tool.poetry]
