--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "server"
+name = "app"
 version = "0.1.0"
 description = ""
 authors = [
@@ -25,7 +25,7 @@ dependencies = [
 ]
 
 [tool.poetry]
-packages = [{include = "server", from = "src"}]
+packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "=3.11.11"
