--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -21,7 +21,10 @@ dependencies = [
     "aiosqlite (>=0.21.0,<0.22.0)",
  "gtts (>=2.5.4,<3.0.0)",
  "langchain-openai (>=0.3.8,<0.4.0)",
- "googletrans (>=4.0.2,<5.0.0)"
+ "googletrans (>=4.0.2,<5.0.0)",
+ "fastapi-sessions (>=0.3.2,<0.4.0)",
+ "jwt (>=1.3.1,<2.0.0)",
+ "pyjwt (>=2.10.1,<3.0.0)",
 ]
 
 [tool.poetry]
